# tomtom-watch-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_8md.html  activity__commands_8cpp.html  activity__commands_8cpp.js  activity__commands_8cpp__incl.map  activity__commands_8cpp__incl.md5  annotated.html  annotated_dup.js  classes.html  classtomtom_1_1Manager-members.html  classtomtom_1_1Manager.html  classtomtom_1_1Manager.js  classtomtom_1_1USBConnection-members.html  classtomtom_1_1USBConnection.html  classtomtom_1_1USBConnection.js  classtomtom_1_1USBConnection_1_1Impl-members.html  classtomtom_1_1USBConnection_1_1Impl.html  classtomtom_1_1USBConnection_1_1Impl.js  classtomtom_1_1Watch-members.html  classtomtom_1_1Watch.html  classtomtom_1_1Watch.js  classtomtom_1_1Watch__coll__graph.map  classtomtom_1_1Watch__coll__graph.md5  classtomtom_1_1cli_1_1CliApp-members.html  classtomtom_1_1cli_1_1CliApp.html  classtomtom_1_1cli_1_1CliApp.js  classtomtom_1_1cli_1_1Commands-members.html  classtomtom_1_1cli_1_1Commands.html  classtomtom_1_1cli_1_1Commands.js  classtomtom_1_1cli_1_1ProgressIndicator-members.html  classtomtom_1_1cli_1_1ProgressIndicator.html  classtomtom_1_1cli_1_1ProgressIndicator.js  classtomtom_1_1core_1_1Watch-members.html  classtomtom_1_1core_1_1Watch.html  classtomtom_1_1core_1_1Watch.js  classtomtom_1_1core_1_1commands_1_1FileOperations-members.html  classtomtom_1_1core_1_1commands_1_1FileOperations.html  (+960 more)
cli/: CMakeLists.txt
cli/app/: main.cpp
cli/include/cli/: cli_app.hpp  commands.hpp
cli/src/: cli_app.cpp  main.cpp
core/: .gitignore  CMakeLists.txt  Doxyfile
core/include/tomtom/: defines.hpp  manager.hpp  packets.hpp  watch.hpp
core/include/tomtom/connection/: connection.hpp  connection_factory.hpp  device_connection.hpp  device_connection_factory.hpp  device_info.hpp  usb_connection.hpp
core/include/tomtom/connection/usb/: usb_connection.hpp  usb_connection_impl.hpp  usb_device_connection.hpp  usb_device_connection_impl.hpp
core/include/tomtom/core/: watch.hpp
core/include/tomtom/core/commands/: file_operations.hpp  kernel_operations.hpp
core/include/tomtom/core/transport/: connection.hpp  connection_factory.hpp  device_info.hpp
core/include/tomtom/core/utils/: endianness.hpp  logging.hpp
core/include/tomtom/files/: file_ids.hpp
core/include/tomtom/files/common/: binary_reader.hpp  export_formats.hpp
core/include/tomtom/files/preferences/: preferences.hpp  preferences_model.hpp  preferences_parser.hpp  preferences_serializer.hpp  preferences_service.hpp
core/include/tomtom/interface/codec/: packet_handler.hpp  packet_validation.hpp  transaction_exceptions.hpp
core/include/tomtom/interface/protocol/: packet.hpp  packet_header.hpp  packet_types.hpp  payload_traits.hpp  protocol.hpp
core/include/tomtom/protocol/: protocol.hpp  protocol_handler.hpp  protocol_packet.hpp  protocol_types.hpp  protocol_utils.hpp
core/include/tomtom/protocol/definition/: packet.hpp  packet_header.hpp  packet_types.hpp  payload_traits.hpp  protocol.hpp
core/include/tomtom/protocol/runtime/: packet_handler.hpp  packet_validation.hpp  transaction_exceptions.hpp
core/include/tomtom/services/: file_ids.hpp  file_service.hpp  watch_control_service.hpp  watch_info_service.hpp
core/include/tomtom/transport/: connection.hpp  connection_factory.hpp  device_info.hpp
core/include/tomtom/utils/: binary_reader.hpp  http_utils.hpp
core/src/: manager.cpp  watch.cpp
core/src/commands/: file_operations.cpp  kernel_operations.cpp
core/src/connection/: connection.cpp  connection_factory.cpp  device_connection.cpp  device_connection_factory.cpp  usb_connection.cpp
core/src/connection/usb/: usb_connection.cpp  usb_connection_windows.cpp  usb_device_connection.cpp  usb_device_connection_windows.cpp
core/src/files/preferences/: preferences_parser.cpp  preferences_serializer.cpp  preferences_service.cpp
core/src/interface/codec/: packet_handler.cpp
core/src/protocol/: protocol.cpp
core/src/protocol/runtime/: packet_handler.cpp
core/src/protocol/services/: file_service.cpp  watch_control_service.cpp  watch_info_service.cpp
core/src/services/: file_service.cpp  watch_control_service.cpp  watch_info_service.cpp
core/src/services/activity/: activity_parser.cpp  activity_service.cpp
core/src/services/files/: file_service.cpp
core/src/services/gps_quickfix/: gps_quickfix_service.cpp
core/src/services/preferences/: preferences_parser.cpp  preferences_serializer.cpp  preferences_service.cpp
core/src/services/watch/: watch_service.cpp
core/src/transport/: connection.cpp  connection_factory.cpp
core/src/transport/usb/: usb_connection.cpp  usb_connection_macos.cpp  usb_connection_unix.cpp  usb_connection_windows.cpp
core/src/utils/: http_utils.cpp
core/test/: test_manager.cpp  test_windows_usb.cpp
examples/: CMakeLists.txt  example_config_test.cpp  example_dump_file.cpp  example_gps_quickfix.cpp  example_parse_activity.cpp  example_usage.cpp
sdk/: CMakeLists.txt  README.md
sdk/include/tomtom/sdk/: activity_converter.hpp  activity_exporter.hpp  activity_manager.hpp  export_formats.hpp  gps_manager.hpp  manager.hpp  quickfix_manager.hpp  settings_manager.hpp  sync_service.hpp
sdk/src/: activity_converter.cpp  activity_exporter.cpp  activity_manager.cpp  gps_manager.cpp  manager.cpp  quickfix_manager.cpp  settings_manager.cpp  sync_service.cpp
sdk/src/converters/: gpx_converter.cpp  json_converter.cpp  kml_converter.cpp
sdk/src/networking/: http_client.cpp
sdk/src/parsers/: activity_parser.cpp  preferences_parser.cpp
sdk/src/serializers/: preferences_serializer.cpp
sdk/src/services/: activity_service.cpp  device_service.cpp  gps_service.cpp  preferences_service.cpp
sdk/src/store/: local_store.cpp
sdk/src/utils/: http_client.cpp
ui/cli/: CMakeLists.txt
ui/cli/app/: main.cpp
ui/cli/include/cli/: cli_app.hpp  commands.hpp
ui/cli/src/: cli_app.cpp  cli_helpers.cpp  commands.cpp
ui/cli/src/commands/: activity_commands.cpp  device_commands.cpp  gps_commands.cpp  sync_commands.cpp  utils_commands.cpp
(+262 files in other folders)
